# npcv2

./: .gitignore  CMakeLists.txt  CMakeLists.txt~  Doxyfile  README  README.md
docs/: gui-wpf.md  named-pipe.md  namespaces.h
docs/html/: _application_8h.html  _application_8h__dep__incl.map  _application_8h__dep__incl.md5  _application_8h_source.html  _config_8h_source.html  _dialog_file_select_windows_8h_source.html  _edge_detect_canny_8h_source.html  _erosion_8h_source.html  _i_dialog_file_select_8h_source.html  _i_file_path_8h_source.html  _i_image_g_u_i_8h_source.html  _i_image_stream_8h_source.html  _i_log_listener_8h_source.html  _i_p_blending_8h_source.html  _i_p_matrix_apply_8h_source.html  _i_process_8h_source.html  _i_process_image_8h_source.html  _image_8h_source.html  _image_box_8h_source.html  _image_inspector_box_8h_source.html  _image_stream_n_p_8h_source.html  _image_stream_s_t_b_8h_source.html  _image_thresholding_8h_source.html  _log_listener_debug_8h_source.html  _n_pipe_request_to_image_process_8h_source.html  _npcv_g_u_i_8h_source.html  _p_apply_matrix_8h_source.html  _pixel_8h_source.html  _process_gray_8h_source.html  _profiler_8h_source.html  _region_edge_8h_source.html  _resizable_image_8h_source.html  _resource_manager_8h_source.html  _sampling_8h_source.html  _sampling_image_8h_source.html  _toolset_8h_source.html  _treshold_8h_source.html  _win_matrix_filter_8h_source.html  _zoom_8h_source.html  annotated.html  (+387 more)
docs/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_2.js  all_3.js  all_4.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  enums_0.js  enumvalues_1.js  functions_0.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  functions_8.js  functions_9.js  (+13 more)
include/npcv/: Application.h  Config.h  LogListenerDebug.cpp  LogListenerDebug.h  Toolset.h  appinfo.h  appinfo.h.in.cmake
include/npcv/abs/: AbsFilePath.h  AbsImage.h  AbsImageStream.h  AbsProcess.h  IDialogFileSelect.h  IFilePath.h  IImageStream.h  ILogListener.h  IProcess.h  LogListener.h
include/npcv/abs/types/: AbsImage.h
include/npcv/classification/: RegionEdge.h
include/npcv/filters/: IProcessImage.h
include/npcv/freatures/: EdgeDetectCanny.h
include/npcv/geometric/: Zoom.h
include/npcv/morphology/: Erosion.h
include/npcv/processes/: Erosion.cpp  Erosion.h  IPBlending.h  IPMatrixApply.h  IProcessImage.h  ProcessGray.h  Treshold.cpp  Treshold.h
include/npcv/types/: Image.h  ImageBGR.h  Pixel.h
include/npcv/types/params/: PApplyMatrix.h
include/npcv/ui/: DialogFileSelectWindows.h
include/npcv/utils/: ImageStreamNP.h  ImageStreamSTB.h  Profiler.h  ResourceManager.h  Sampling.h  SamplingImage.h
include/npcv/utils/converters/: NPipeRequestToImageProcess.h
lib/Release/: npcv.lib
samples/data/output/: .gitignore
samples/demos/: CMakeLists.txt  ConvolutionMatrix.cpp  EdgeDetection.cpp  Erosion.cpp  FilterConvolutionMatrix.cpp  OCRClassify.cpp  ZoomImage.cpp  ZoomImage.h
src/: Application.cpp  CMakeLists.txt  CMakeLists.txt~  LogListenerDebug.cpp  Toolset.cpp
src/classification/: RegionEdge.cpp
src/filters/: IPBlending.cpp  IPMatrixApply.cpp  IProcessImage.cpp  ProcessGray.cpp
src/freatures/: EdgeDetectCanny.cpp
src/geometric/: Zoom.cpp
src/guisfml/: MainGUI.cpp  guiMain.cpp
src/guisfml/include/widgets/: ImageInspectorBox.h  WinMatrixFilter.h
src/guisfml/src/: NpcvGUI.cpp
src/guisfml/src/widgets/: ImageInspectorBox.cpp
src/morphology/: Erosion.cpp
src/npcv/: Application.cpp
src/npcvgui/: CMakeLists.txt  guiMain.cpp
src/npcvgui/include/: NpcvGUI.h
src/npcvgui/include/controlls/: IImageGUI.h  ImageBox.h  ImageInspectorBox.h
src/npcvgui/include/widgets/: ImageBox.h  ResizableImage.h
src/npcvgui/src/: NpcvGUI.cpp
src/npcvgui/src/controlls/: ImageBox.cpp  ImageInspectorBox.cpp  WinMatrixFilter.cpp
src/npcvgui/src/widgets/: ImageBox.cpp  WinMatrixFilter.cpp
src/processes/: Erosion.cpp  IPBlending.cpp  IPMatrixApply.cpp  IProcessImage.cpp  ProcessGray.cpp
src/segmentation/: Treshold.cpp
src/types/: Image.cpp  ImageBGR.cpp  Pixel.cpp
src/ui/: DialogFileSelectWindows.cpp
src/utils/: ImageStreamNP.cpp  ImageStreamSTB.cpp  Profiler.cpp  ResourceManager.cpp  Sampling.cpp  SamplingImage.cpp
src/utils/converters/: NPipeRequestToImageProcess.cpp
test/: CMakeLists.txt  Main.cpp  Maincpp.cpp
tools/share/cmake/: NPMacros.cmake
